--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<ul>
-  <li *ngFor="let user of users">#{{ user.id }} {{ user.first_name }} {{ user.last_name }}</li>
-</ul>
+<user-list [users]="users"></user-list>
+
+<button (click)="onClick()"></button>
