--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<user-list [users]="users"></user-list>
+<user-list [users]="userService.users$ | async"></user-list>
 
-<button (click)="onClick()"></button>
+<button (click)="onClick()">test</button>
