form and state management

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<user-list [users]="userService.users$ | async"></user-list>
-
-<button (click)="onClick()">test</button>
+<user-list-filter [value]="userListFilter$ | async" (valueChange)="setUserListFilter($event)"> </user-list-filter>
+<user-list [users]="users$ | async"></user-list>
