--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <user-list-filter [value]="userListFilter$ | async" (valueChange)="setUserListFilter($event)"> </user-list-filter>
 <user-list [users]="users$ | async"></user-list>
+
+<router-outlet></router-outlet>
