subscribe observable on component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<user-list-filter [value]="userListFilter$ | async" (valueChange)="setUserListFilter($event)"> </user-list-filter>
+<button (click)="updateValue()">Update Value</button>
+
+<!-- <user-list-filter [value]="userListFilter$ | async" (valueChange)="setUserListFilter($event)"> </user-list-filter>
 <user-list [users]="users$ | async"></user-list>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
